@@ -14,6 +14,7 @@ New in 1.0-RC2; 2009-0X-XX Rickard Bondesson
 * The default location of the config file is $sysconfdir/softhsm.conf
 * Simplified the configure options
 * The softhsm tool initialize the tokens by using the library.
+* Import keys via PKCS#11 and the softhsm tool.
 
 New in 1.0-RC1; 2009-03-10 Rickard Bondesson
 
